App Mapper and Reducer

--- a/python-analysis/analyze.ipynb
+++ b/python-analysis/analyze.ipynb
@@ -15,7 +15,16 @@
     "- nazwa artysty\n",
     "- dekada\n",
     "- liczba wydanych płyt\n",
-    "- lista różnych gatunków na wydanych płytach"
+    "- lista różnych gatunków na wydanych płytach\n",
+    " <br> <br>\n",
+    " \n",
+    " Realizację projektu można podzielić na kilka faz (w nawiasach podano terminy, których będziemy chcieli się trzymać)\n",
+    "\n",
+    "    Implementację pierwszej części tego projektu opartej na MapReduce (25.10)\n",
+    "    Implementację drugiej części opartej na platformie Hive (01.11)\n",
+    "    Implementację orkiestracji całego przepływu danych (obejmującej obie powyższe części) (02-03.11) - zrobimy to w ramach zajęć\n",
+    "    Rejestrację rozwiązań (02-10.11)\n",
+    "    Ocenę cudzych rozwiązań (11-17.11)"
    ]
   },
   {
@@ -57,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f7c85322-4621-482e-8d37-907a7230529a",
    "metadata": {
     "tags": []
@@ -71,7 +80,7 @@
        "       'Folk, World, & Country'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "abc793ee-fc99-4441-bf6d-b7ab7a19f78e",
    "metadata": {
     "tags": []
@@ -119,137 +128,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>173</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>Common Factor</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Electronic]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <th>7255</th>\n",
+       "      <td>1818</td>\n",
        "      <td>194</td>\n",
        "      <td>1990</td>\n",
        "      <td>Various</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Electronic]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1706</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>Paperclip People</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Electronic]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3255</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>Designer Music</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Electronic]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6</td>\n",
-       "      <td>18231</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>Fugees</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Hip Hop]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51511</th>\n",
-       "      <td>3272121</td>\n",
-       "      <td>13031346</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>Squeeze Play</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Rock]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51512</th>\n",
-       "      <td>3274611</td>\n",
-       "      <td>537204</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>Sfumato</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Electronic]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51513</th>\n",
-       "      <td>3276255</td>\n",
-       "      <td>194</td>\n",
-       "      <td>1970</td>\n",
-       "      <td>Various</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Rock]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51514</th>\n",
-       "      <td>3280047</td>\n",
-       "      <td>13060059</td>\n",
-       "      <td>1980</td>\n",
-       "      <td>Voices Of Joy &amp; Company</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Funk / Soul]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51515</th>\n",
-       "      <td>3284613</td>\n",
-       "      <td>12919505</td>\n",
-       "      <td>1970</td>\n",
-       "      <td>Brian Todd &amp; Whiplash</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[Rock]</td>\n",
+       "      <td>63</td>\n",
+       "      <td>[Electronic, Pop, Non-Music, Classical, Rock, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>51516 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       label_id  artist_id  decade              artist_name  num_records  \\\n",
-       "0             1        173    1990            Common Factor            1   \n",
-       "1             1        194    1990                  Various            1   \n",
-       "2             1       1706    1990         Paperclip People            1   \n",
-       "3             1       3255    2000           Designer Music            1   \n",
-       "4             6      18231    1990                   Fugees            1   \n",
-       "...         ...        ...     ...                      ...          ...   \n",
-       "51511   3272121   13031346    1980             Squeeze Play            1   \n",
-       "51512   3274611     537204    1990                  Sfumato            1   \n",
-       "51513   3276255        194    1970                  Various            1   \n",
-       "51514   3280047   13060059    1980  Voices Of Joy & Company            1   \n",
-       "51515   3284613   12919505    1970    Brian Todd & Whiplash            1   \n",
+       "      label_id  artist_id  decade artist_name  num_records  \\\n",
+       "7255      1818        194    1990     Various           63   \n",
        "\n",
-       "       unique_genres  \n",
-       "0       [Electronic]  \n",
-       "1       [Electronic]  \n",
-       "2       [Electronic]  \n",
-       "3       [Electronic]  \n",
-       "4          [Hip Hop]  \n",
-       "...              ...  \n",
-       "51511         [Rock]  \n",
-       "51512   [Electronic]  \n",
-       "51513         [Rock]  \n",
-       "51514  [Funk / Soul]  \n",
-       "51515         [Rock]  \n",
-       "\n",
-       "[51516 rows x 6 columns]"
+       "                                          unique_genres  \n",
+       "7255  [Electronic, Pop, Non-Music, Classical, Rock, ...  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "no = result[result.num_records == result.num_records.max()]\n",
+    "no\n",
+    "# w MapReduce jest 62 -> do sprawdzenia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a33bd4af-d87c-486a-828d-47cea9ee1880",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
       ]
      },
      "execution_count": 6,
@@ -258,7 +179,8 @@
     }
    ],
    "source": [
-    "result"
+    "len(result[result['artist_name']=='Led Zeppelin'])\n",
+    "# MapReduce to samo"
    ]
   }
  ],
