--- a/python-analysis/analyze.ipynb
+++ b/python-analysis/analyze.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "a33bd4af-d87c-486a-828d-47cea9ee1880",
    "metadata": {
     "tags": []
@@ -173,13 +173,37 @@
        "26"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(result[result['artist_name']=='Led Zeppelin'])\n",
+    "# MapReduce to samo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "628d46ee-9c3a-4581-b4bd-cc9fdc909315",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[result['artist_name']=='Led Zeppelin']['num_records'].sum()\n",
     "# MapReduce to samo"
    ]
   }
